--- a/class/index.html
+++ b/class/index.html
@@ -107,12 +107,11 @@
       </div>
       <div>
         <p>Team 2</p>
-        <div id="team2Score" onclick="dataInputAlert('Set points to:',['playGamePop'],true,setPoints)">0</div>
-        <!-- onclick="dataInputAlert('Adjust team 2 score',['playGamePop'],false,adjustGameScore,2)" -->
+        <div id="team2Score" onclick="dataInputAlert('Adjust team 2 score',['playGamePop'],false,adjustGameScore,2)">0</div>
       </div>
     </div>
     <p id="currentPlayer"></p>
-    <div id="gamePointButtonsContainer">
+<!--     <div id="gamePointButtonsContainer">
       <div class="gamePointButton" id="gamePoint1" onclick="gameScorePoints(1)">1</div>
       <div class="gamePointButton" id="gamePoint2" onclick="gameScorePoints(2)">2</div>
       <div class="gamePointButton" id="gamePoint3" onclick="gameScorePoints(3)">3</div>
@@ -125,7 +124,7 @@
       <div class="gameUndoButton" onclick="undoGameScorePoints()">b</div>
       <div class="gamePointButton" id="gamePoint10" onclick="gameScorePoints(10)">10</div>
       <div class="gameLogButton" onclick="pop(['playGamePop'],['gameLogPop'])">Log</div>
-    </div>
+    </div> -->
   </div>
 
   <div id="advancedOptionsPop" class="pop">
