--- a/class/index.html
+++ b/class/index.html
@@ -111,7 +111,7 @@
       </div>
     </div>
     <p id="currentPlayer"></p>
-<!--     <div id="gamePointButtonsContainer">
+    <div id="gamePointButtonsContainer">
       <div class="gamePointButton" id="gamePoint1" onclick="gameScorePoints(1)">1</div>
       <div class="gamePointButton" id="gamePoint2" onclick="gameScorePoints(2)">2</div>
       <div class="gamePointButton" id="gamePoint3" onclick="gameScorePoints(3)">3</div>
@@ -124,7 +124,7 @@
       <div class="gameUndoButton" onclick="undoGameScorePoints()">b</div>
       <div class="gamePointButton" id="gamePoint10" onclick="gameScorePoints(10)">10</div>
       <div class="gameLogButton" onclick="pop(['playGamePop'],['gameLogPop'])">Log</div>
-    </div> -->
+    </div>
   </div>
 
   <div id="advancedOptionsPop" class="pop">
@@ -715,7 +715,6 @@
   <div id="asPointsPop" class="pop">
     <div class="navigationButtonContainer">
       <div class="backButton" onclick="pop(['asPointsPop'],['missionsPop'])"><span>f</span></div>
-      <div class="homeButton" onclick="goHome()"><span>5</span></div>
     </div>
     <div class="flex">
         <div class="numberButton asPts" onclick="asPoints(_asNum,1)">1</div>
@@ -735,7 +734,6 @@
   <div id="mvPointsPop" class="pop">
     <div class="navigationButtonContainer">
       <div class="backButton" onclick="pop(['mvPointsPop'],['missionsPop'])"><span>f</span></div>
-      <div class="homeButton" onclick="goHome()"><span>5</span></div>
     </div>
     <div class="flex">
         <div class="numberButton mvPts" onclick="mvPoints(_mvNum,1)">1</div>
