--- a/class/index.html
+++ b/class/index.html
@@ -645,7 +645,7 @@
     </div>
   </div>
   
-  <div id="missionsPop" class="pop" onclick="pop(['attendance2Pop'],['studentPop'])">
+  <div id="missionsPop" class="pop">
       <div id="asPop">
         <div class="asmvHeader" onclick="pop(['studentPop','missionsPop'],['missionVisibilityPop'])">Activity<br>Sheets</div>
         <div id="as32Pop" class="asButton2 w32" onclick="asPop(32,6)">Armor<br>Review</div>
