--- a/class/index.html
+++ b/class/index.html
@@ -678,7 +678,7 @@
       <div class="backButton" onclick="pop(['randomPop'],['mainMenuPop'])"><span>f</span></div>
       <div class="homeButton" onclick="goHome()"><span>5</span></div>
     </div>
-    <div class="randomName" onclick="random()">
+    <div id="randomNameDiv" onclick="random()">
         <p id="randomName">tap here<br>to pick</p>
     </div>
     <div id="randomFilter">
