--- a/class/index.html
+++ b/class/index.html
@@ -668,8 +668,8 @@
       <div class="backButton" onclick="pop(['drawingPop'],['mainMenuPop'])"><span>f</span></div>
       <div class="homeButton" onclick="goHome()"><span>5</span></div>
     </div>
-    <div class="randomName" onclick="drawing()">
-        <p id="winnerName">tap here<br>to pick</p>
+    <div id="drawingNameDiv" onclick="drawing()">
+        <p id="drawingName">tap here<br>to pick</p>
     </div>
   </div>
   
