--- a/class/index.html
+++ b/class/index.html
@@ -134,7 +134,7 @@
       <div class="gamePointButton" id="gamePoint9" onclick="gameScorePoints(9)">9</div>
       <div class="gameUndoButton" onclick="undoGameScorePoints()">b</div>
       <div class="gamePointButton" id="gamePoint10" onclick="gameScorePoints(10)">10</div>
-      <div class="gameLogButton" onclick="pop(['playGamePop'],['gameLogPop'])">Log</div>
+      <div class="gameLogButton" onclick="pop(['playGamePop'],['gameLogPop'])">LOG</div>
     </div>
   </div>
 
