--- a/class/students.html
+++ b/class/students.html
@@ -316,7 +316,7 @@
 
 <div id="missionsPop" class="pop">
     <div id="missionsTitleDiv">MISSIONS</div>
-    <label class="checkboxLabel"><input type="checkbox" id="toggleIncompleteCheck" class="checkbox" onclick="toggleIncomplete()">Show only incompeted missions</label><br>
+    <label class="checkboxLabel"><input type="checkbox" id="toggleIncompleteCheck" class="checkbox" onclick="toggleIncomplete()">Show only incompleted missions</label><br>
     <div id="asmvHeaderContainer">
       <div class="asmvHeader">Activity Sheets</div>
       <div class="asmvHeader">Memory Verses</div>
