--- a/class/index.html
+++ b/class/index.html
@@ -68,7 +68,7 @@
             <div class="button" onclick="pop(['mainMenuPop'],['drawingPop'])">Drawing</div>
             <div class="button" onclick="pop(['mainMenuPop'],['randomPop'])">Random</div>
             <div class="button" onclick="teams()">Teams</div>
-            <div class="button" onclick="preloadImages()">Cache Images</div>
+            <div class="button" onclick="preloadImages(pop)">Cache Images</div>
             <div class="button" id="teacherNotesButton" onclick="pop(['mainMenuPop'],['teacherNotesPop']); populateTeacherNotes()">Notes</div>
             <div class="button" onclick="pop(['mainMenuPop'],['logPop'])">Log</div>
             <div class="button" onclick="pop(['mainMenuPop'],['backupPop'])">Backup</div>
