--- a/class/index.html
+++ b/class/index.html
@@ -68,7 +68,7 @@
             <div class="button" onclick="pop(['mainMenuPop'],['drawingPop'])">Drawing</div>
             <div class="button" onclick="pop(['mainMenuPop'],['randomPop'])">Random</div>
             <div class="button" onclick="teams()">Teams</div>
-            <div class="button" onclick="preloadImages(pop)">Cache Images</div>
+            <div class="button" onclick="preloadImages()">Cache Images</div>
             <div class="button" id="teacherNotesButton" onclick="pop(['mainMenuPop'],['teacherNotesPop']); populateTeacherNotes()">Notes</div>
             <div class="button" onclick="pop(['mainMenuPop'],['logPop'])">Log</div>
             <div class="button" onclick="pop(['mainMenuPop'],['backupPop'])">Backup</div>
@@ -257,7 +257,7 @@
           <div class="studentPopButtons" id="editButton" onclick="populateStudentFields()">edit info</div>
           <div class="studentPopButtons" id="notesButton" onclick="pop(['studentPop','missionsPop'],['notesPop','notesList']); populateNotes()">notes</div>
           <div class="studentPopButtons" id="photoButton" onclick="loadStudentPhoto()">photo</div>
-          <div class="studentPopButtons" id="attendance2Button" onclick="populateNames2()">attendance</div>
+          <div class="studentPopButtons" id="attendance2Button"></div>
           <div class="studentPopButtons" id="emailButton" onclick="populateStudentFields('editEmail1')">email</div>
       </div>
   </div>
@@ -696,6 +696,7 @@
   <div id="missionsPop" class="pop">
       <div id="asmvHeaderContainer">
         <div class="asmvHeader" onclick="pop(['studentPop','missionsPop'],['missionVisibilityPop'])">Activity<br>Sheets</div>
+        <div class="secretButton" onclick="populateNames2()"></div>
         <div class="asmvHeader" onclick="toggleIncomplete()">Memory<br>Verses</div>
       </div>
       <div id=asmvPopContainer>
@@ -774,7 +775,9 @@
   
   <div id="asPointsPop" class="pop">
     <div class="lowerNavigationButtonContainer">
+      <div class="secretButton2" onclick="populateNames2()"></div>
       <div class="backButton" onclick="pop(['asPointsPop','asReasonContainer'],['missionsPop'])"><span>f</span></div>
+      <div class="secretButton2" onclick="populateNames2()"></div>
     </div>
     <div class="pointButtonContainer">
         <div id="as1Points" class="roundButton numberButton asPts" onclick="asPoints(_asNum,1)">1</div>
@@ -801,7 +804,9 @@
   
   <div id="mvPointsPop" class="pop">
     <div class="lowerNavigationButtonContainer">
+      <div class="secretButton2" onclick="populateNames2()"></div>
       <div class="backButton" onclick="pop(['mvPointsPop'],['missionsPop'])"><span>f</span></div>
+      <div class="secretButton2" onclick="populateNames2()"></div>
     </div>
     <div class="pointButtonContainer">
         <div class="roundButton numberButton mvPts" onclick="mvPoints(_mvNum,1)">1</div>
