--- a/archives.html
+++ b/archives.html
@@ -10,7 +10,7 @@
 
         <div class="header-div-archives">
             <a href="index.html">
-                <header class="non-index-header" title="Go to Homepage">Mission Archives</header>
+                <header class="non-index-header" title="Go to Homepage">Archives</header>
             </a>
         </div>
                     
@@ -29,12 +29,12 @@
                     <td>Jn. 1:18</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/12-jn-1-9-review-jn-1-18.pdf'">&#11015 Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-11-14-update.pdf'">&#11015 Update</td>
+                    <td class="download-mission" onclick="window.location='docs/missions/12-jn-1-9-review-jn-1-18.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-11-14-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
                 </tr>
                 <tr>
-                    <td class="no-video">n/a</td>
-                    <td class="video" onclick="window.location='https://youtu.be/bevItjAgLbA'">&#9654 Memory</td>
+                    <td class="no-video">no lesson video</td>
+                    <td class="video" onclick="window.location='https://youtu.be/bevItjAgLbA'"><span class="playButtonSpan">D </span>Lesson</td>
                 </tr>
             </table>
 
@@ -51,12 +51,12 @@
                     <td>Jn. 1:16-17</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/11-jn-9-jn-1-16-17.pdf'">&#11015 Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-11-07-update.pdf'">&#11015 Update</td>
+                    <td class="download-mission" onclick="window.location='docs/missions/11-jn-9-jn-1-16-17.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-11-07-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
                 </tr>
                 <tr>
-                    <td class="video" onclick="window.location='https://youtu.be/J7qs7qfulJQ'">&#9654 Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/_dh5Bwazilo'">&#9654 Memory</td>
+                    <td class="video" onclick="window.location='https://youtu.be/J7qs7qfulJQ'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/_dh5Bwazilo'"><span class="playButtonSpan">D </span>Memory</td>
                 </tr>
             </table>
 
@@ -73,12 +73,12 @@
                     <td>Jn. 1:15</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/10-jn-8-jn-1-15.pdf'">&#11015 Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-31-update.pdf'">&#11015 Update</td>
+                    <td class="download-mission" onclick="window.location='docs/missions/10-jn-8-jn-1-15.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-31-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
                 </tr>
                 <tr>
-                    <td class="video" onclick="window.location='https://youtu.be/S-XCqvUY458'">&#9654 Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/kLw4zQR5oc0'">&#9654 Memory</td>
+                    <td class="video" onclick="window.location='https://youtu.be/S-XCqvUY458'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/kLw4zQR5oc0'"><span class="playButtonSpan">D </span>Lesson</td>
                 </tr>
             </table>
 
@@ -95,12 +95,12 @@
                     <td>Jn. 1:14</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/09-jn-7-jn-1-14.pdf'">&#11015 Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-24-update.pdf'">&#11015 Update</td>
+                    <td class="download-mission" onclick="window.location='docs/missions/09-jn-7-jn-1-14.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-24-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
                 </tr>
                 <tr>
-                    <td class="video" onclick="window.location='https://youtu.be/7tHrVXzfuB0'">&#9654 Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/Rco2S6i2sm8'">&#9654 Memory</td>
+                    <td class="video" onclick="window.location='https://youtu.be/7tHrVXzfuB0'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/Rco2S6i2sm8'"><span class="playButtonSpan">D </span>Lesson</td>
                 </tr>
             </table>
 
@@ -117,12 +117,12 @@
                     <td>Jn. 1:12-13</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/08-jn-6-jn-1-12-13.pdf'">&#11015 Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-17-update.pdf'">&#11015 Update</td>
+                    <td class="download-mission" onclick="window.location='docs/missions/08-jn-6-jn-1-12-13.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-17-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
                 </tr>
                 <tr>
-                    <td class="video" onclick="window.location='https://youtu.be/wwPvs-kirD8'">&#9654 Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/41fN6-uX_cY'">&#9654 Memory</td>
+                    <td class="video" onclick="window.location='https://youtu.be/wwPvs-kirD8'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/41fN6-uX_cY'"><span class="playButtonSpan">D </span>Lesson</td>
                 </tr>
             </table>
 
@@ -139,12 +139,12 @@
                     <td>Jn. 1:9-11</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/07-jn-5-jn-1-9-11.pdf'">&#11015 Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-10-update.pdf'">&#11015 Update</td>
+                    <td class="download-mission" onclick="window.location='docs/missions/07-jn-5-jn-1-9-11.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-10-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
                 </tr>
                 <tr>
-                    <td class="video" onclick="window.location='https://youtu.be/LbRGI7ooREs'">&#9654 Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/MuDfyTLUdoI'">&#9654 Memory</td>
+                    <td class="video" onclick="window.location='https://youtu.be/LbRGI7ooREs'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/MuDfyTLUdoI'"><span class="playButtonSpan">D </span>Lesson</td>
                 </tr>
             </table>
 
@@ -161,12 +161,12 @@
                     <td>Jn. 1:6-8</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/06-jn-4-jn-1-6-8.pdf'">&#11015 Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-03-update.pdf'">&#11015 Update</td>
+                    <td class="download-mission" onclick="window.location='docs/missions/06-jn-4-jn-1-6-8.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-03-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
                 </tr>
                 <tr>
-                    <td class="video" onclick="window.location='https://youtu.be/Q2n4_VjO4fE'">&#9654 Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/_CVmjvKAiMU'">&#9654 Memory</td>
+                    <td class="video" onclick="window.location='https://youtu.be/Q2n4_VjO4fE'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/_CVmjvKAiMU'"><span class="playButtonSpan">D </span>Lesson</td>
                 </tr>
             </table>
 
@@ -183,12 +183,12 @@
                     <td>Jn. 1:4-5</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/05-jn-3-jn-1-4-5.pdf'">&#11015 Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-09-26-update.pdf'">&#11015 Update</td>
+                    <td class="download-mission" onclick="window.location='docs/missions/05-jn-3-jn-1-4-5.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-09-26-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
                 </tr>
                 <tr>
-                    <td class="video" onclick="window.location='https://youtu.be/KRXjGR-b73k'">&#9654 Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/eSHxKwcihoU'">&#9654 Memory</td>
+                    <td class="video" onclick="window.location='https://youtu.be/KRXjGR-b73k'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/eSHxKwcihoU'"><span class="playButtonSpan">D </span>Lesson</td>
                 </tr>
             </table>
 
@@ -205,12 +205,12 @@
                     <td>Jn. 1:3</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/04-jn-2-jn-1-3.pdf'">&#11015 Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-09-19-update.pdf'">&#11015 Update</td>
+                    <td class="download-mission" onclick="window.location='docs/missions/04-jn-2-jn-1-3.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-09-19-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
                 </tr>
                 <tr>
-                    <td class="video" onclick="window.location='https://youtu.be/dgQd-nDYEkE'">&#9654 Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/4FbYa-jBzb4'">&#9654 Memory</td>
+                    <td class="video" onclick="window.location='https://youtu.be/dgQd-nDYEkE'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/4FbYa-jBzb4'"><span class="playButtonSpan">D </span>Lesson</td>
                 </tr>
             </table>
 
@@ -227,12 +227,12 @@
                     <td>Jn. 1:1-2</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/03-jn-1-jn-1-1-2.pdf'">&#11015 Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-09-12-update.pdf'">&#11015 Update</td>
+                    <td class="download-mission" onclick="window.location='docs/missions/03-jn-1-jn-1-1-2.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-09-12-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
                 </tr>
                 <tr>
-                    <td class="video" onclick="window.location='https://youtu.be/9xGjPzEF_tE'">&#9654 Lesson</td>
-                    <td class="video" onclick="window.location='https://www.youtube.com/watch?v=T8jHgItEpxY'">&#9654 Memory</td>
+                    <td class="video" onclick="window.location='https://youtu.be/9xGjPzEF_tE'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://www.youtube.com/watch?v=T8jHgItEpxY'"><span class="playButtonSpan">D </span>Lesson</td>
                 </tr>
             </table>
     
@@ -249,12 +249,12 @@
                     <td>Jn. 20:30-31</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/02-jn-intro-jn-20-30-31.pdf'">&#11015 Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-08-29-update.pdf'">&#11015 Update</td>
+                    <td class="download-mission" onclick="window.location='docs/missions/02-jn-intro-jn-20-30-31.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-08-29-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
                 </tr>
                 <tr>
-                    <td class="no-video">n/a</td>
-                    <td class="video" onclick="window.location='https://youtu.be/1FBcE6eyhV4'">&#9654 Memory</td>
+                    <td class="no-video">no lesson video</td>
+                    <td class="video" onclick="window.location='https://youtu.be/1FBcE6eyhV4'"><span class="playButtonSpan">D </span>Lesson</td>
                 </tr>
             </table>
 
@@ -271,12 +271,12 @@
                     <td>Ps. 139:17-18</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/01-class-intro-ps-139-17-18.pdf'">&#11015 Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-08-22-update.pdf'">&#11015 Update</td>
+                    <td class="download-mission" onclick="window.location='docs/missions/01-class-intro-ps-139-17-18.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-08-22-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
                 </tr>
                 <tr>
-                    <td class="no-video">n/a</td>
-                    <td class="video" onclick="window.location='https://youtu.be/tRcMUQXdVEo'">&#9654 Memory</td>
+                    <td class="no-video">no lesson video</td>
+                    <td class="video" onclick="window.location='https://youtu.be/tRcMUQXdVEo'"><span class="playButtonSpan">D </span>Lesson</td>
                 </tr>
             </table>
 
