--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
             <a href="docs/progress.pdf">
                 <div class="nav-icon-wrapper">
                     <div class="nav-icon-img-wrapper promotion-icon"></div>
-                    <div class="nav-icon-text-wrapper">Promotion Chart</div>
+                    <div class="nav-icon-text-wrapper">Student Progress</div>
                 </div></a>
 
             <a href="docs/missions/12-jn-1-9-review-jn-1-18.pdf">
                 <div class="nav-icon-wrapper">
                     <div class="nav-icon-img-wrapper newest-icon"></div>
-                    <div class="nav-icon-text-wrapper">Newest Missions</div>
+                    <div class="nav-icon-text-wrapper">Newest Mission</div>
                 </div></a>
 
             <a href="archives.html">
                 <div class="nav-icon-wrapper">
                     <div class="nav-icon-img-wrapper archives-icon"></div>
-                    <div class="nav-icon-text-wrapper">Archived Missions</div>
+                    <div class="nav-icon-text-wrapper">Archives</div>
                 </div></a>
             
             <a href="docs/handbook.pdf">
