--- a/archives.html
+++ b/archives.html
@@ -34,7 +34,7 @@
                 </tr>
                 <tr>
                     <td class="no-video">no lesson video</td>
-                    <td class="video" onclick="window.location='https://youtu.be/bevItjAgLbA'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/bevItjAgLbA'"><span class="playButtonSpan">D </span>Memory</td>
                 </tr>
             </table>
 
@@ -78,7 +78,7 @@
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/S-XCqvUY458'"><span class="playButtonSpan">D </span>Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/kLw4zQR5oc0'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/kLw4zQR5oc0'"><span class="playButtonSpan">D </span>Memory</td>
                 </tr>
             </table>
 
@@ -100,7 +100,7 @@
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/7tHrVXzfuB0'"><span class="playButtonSpan">D </span>Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/Rco2S6i2sm8'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/Rco2S6i2sm8'"><span class="playButtonSpan">D </span>Memory</td>
                 </tr>
             </table>
 
@@ -122,7 +122,7 @@
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/wwPvs-kirD8'"><span class="playButtonSpan">D </span>Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/41fN6-uX_cY'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/41fN6-uX_cY'"><span class="playButtonSpan">D </span>Memory</td>
                 </tr>
             </table>
 
@@ -144,7 +144,7 @@
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/LbRGI7ooREs'"><span class="playButtonSpan">D </span>Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/MuDfyTLUdoI'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/MuDfyTLUdoI'"><span class="playButtonSpan">D </span>Memory</td>
                 </tr>
             </table>
 
@@ -166,7 +166,7 @@
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/Q2n4_VjO4fE'"><span class="playButtonSpan">D </span>Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/_CVmjvKAiMU'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/_CVmjvKAiMU'"><span class="playButtonSpan">D </span>Memory</td>
                 </tr>
             </table>
 
@@ -188,7 +188,7 @@
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/KRXjGR-b73k'"><span class="playButtonSpan">D </span>Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/eSHxKwcihoU'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/eSHxKwcihoU'"><span class="playButtonSpan">D </span>Memory</td>
                 </tr>
             </table>
 
@@ -210,7 +210,7 @@
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/dgQd-nDYEkE'"><span class="playButtonSpan">D </span>Lesson</td>
-                    <td class="video" onclick="window.location='https://youtu.be/4FbYa-jBzb4'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/4FbYa-jBzb4'"><span class="playButtonSpan">D </span>Memory</td>
                 </tr>
             </table>
 
@@ -232,7 +232,7 @@
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/9xGjPzEF_tE'"><span class="playButtonSpan">D </span>Lesson</td>
-                    <td class="video" onclick="window.location='https://www.youtube.com/watch?v=T8jHgItEpxY'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://www.youtube.com/watch?v=T8jHgItEpxY'"><span class="playButtonSpan">D </span>Memory</td>
                 </tr>
             </table>
     
@@ -254,7 +254,7 @@
                 </tr>
                 <tr>
                     <td class="no-video">no lesson video</td>
-                    <td class="video" onclick="window.location='https://youtu.be/1FBcE6eyhV4'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/1FBcE6eyhV4'"><span class="playButtonSpan">D </span>Memory</td>
                 </tr>
             </table>
 
@@ -276,7 +276,7 @@
                 </tr>
                 <tr>
                     <td class="no-video">no lesson video</td>
-                    <td class="video" onclick="window.location='https://youtu.be/tRcMUQXdVEo'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/tRcMUQXdVEo'"><span class="playButtonSpan">D </span>Memory</td>
                 </tr>
             </table>
 
