--- a/class/students.html
+++ b/class/students.html
@@ -23,6 +23,11 @@
     <p id="infoAlertTitle">!</p>
     <p id="infoAlertMessage"></p>
     <div id="nameList"></div>
+    <div id="contactButtonContainer">
+      <a href="tel:8645694879"><div class="roundButton">x</a><p>Call</p></div>
+      <a href="sms:8645694879"><div class="roundButton">d</a><p>Text</p></div>
+      <a href="mailto:jonathan@ksgrade2.com"><div class="roundButton">v</a><p>Email</p></div>
+    </div>
 </div>
 
 <div id="studentStatsPop" class="pop">
