--- a/class/students.html
+++ b/class/students.html
@@ -24,9 +24,9 @@
     <p id="infoAlertMessage"></p>
     <div id="nameList"></div>
     <div id="contactButtonContainer">
-      <a href="tel:8645694879"><div class="roundButton">x</a><p>Call</p></div>
-      <a href="sms:8645694879"><div class="roundButton">d</a><p>Text</p></div>
-      <a href="mailto:jonathan@ksgrade2.com"><div class="roundButton">v</a><p>Email</p></div>
+      <a href="tel:8645694879"><div class="contactButton">x</a><p>Call</p></div>
+      <a href="sms:8645694879"><div class="contactButton">d</a><p>Text</p></div>
+      <a href="mailto:jonathan@ksgrade2.com"><div class="contactButton">v</a><p>Email</p></div>
     </div>
 </div>
 
@@ -320,7 +320,7 @@
 
 <div id="missionsPop" class="pop">
     <div id="missionsTitleDiv">MISSIONS</div>
-    <label class="checkboxLabel"><input type="checkbox" id="toggleIncompleteCheck" class="checkbox" onclick="toggleIncomplete()">Show only incompleted missions</label><br>
+    <div class="checkboxes"><label><input type="checkbox" id="toggleIncompleteCheck" class="checkbox" onclick="toggleIncomplete()"><span> Show only incompleted missions</span></label><br></div>
     <div id="asmvHeaderContainer">
       <div class="asmvHeader">Activity Sheets</div>
       <div class="asmvHeader">Memory Verses</div>
