--- a/class/students.html
+++ b/class/students.html
@@ -320,7 +320,7 @@
 
 <div id="missionsPop" class="pop">
     <div id="missionsTitleDiv">MISSIONS</div>
-    <div class="checkboxes"><label><input type="checkbox" id="toggleIncompleteCheck" class="checkbox" onclick="toggleIncomplete()"><span> Show only incompleted missions</span></label><br></div>
+    <div class="checkboxes"><label><input type="checkbox" id="toggleIncompleteCheck" class="checkbox" onclick="toggleIncomplete()"><span> Show incompleted missions only</span></label><br></div>
     <div id="asmvHeaderContainer">
       <div class="asmvHeader">Activity Sheets</div>
       <div class="asmvHeader">Memory Verses</div>
