--- a/class/index.html
+++ b/class/index.html
@@ -59,21 +59,19 @@
 </div>
 
 <div id="mainMenuPop" class="pop">
-      <div class="buttonArr">
-          <div class="navigationButtonContainer">
-            <div class="backButton" onclick="goHome()"><span>f</span></div>
-            <div class="homeButton" onclick="goHome()"><span>5</span></div>
-          </div>
-          <div class="button" onclick="loadAttendanceStats()">Attend. Stats</div>
-          <div class="button" onclick="pop(['mainMenuPop'],['sortChoicePop'])">Sort Students</div>
-          <div class="button" onclick="pop(['mainMenuPop'],['drawingPop'])">Drawing</div>
-          <div class="button" onclick="pop(['mainMenuPop'],['randomPop'])">Random</div>
-          <div class="button" onclick="teams()">Teams</div>
-          <div class="button" onclick="preloadImages()">Cache Images</div>
-          <div class="button" id="teacherNotesButton" onclick="pop(['mainMenuPop'],['teacherNotesPop']); populateTeacherNotes()">Notes</div>
-          <div class="button" onclick="pop(['mainMenuPop'],['logPop'])">Log</div>
-          <div class="button" onclick="pop(['mainMenuPop'],['backupPop'])">Backup</div>
-      </div>
+  <div class="navigationButtonContainer">
+    <div class="backButton" onclick="goHome()"><span>f</span></div>
+    <div class="homeButton" onclick="goHome()"><span>5</span></div>
+  </div>
+  <div class="button" onclick="loadAttendanceStats()">Attendance Stats</div>
+  <div class="button" onclick="pop(['mainMenuPop'],['sortChoicePop'])">Sort Students</div>
+  <div class="button" onclick="pop(['mainMenuPop'],['drawingPop'])">Drawing</div>
+  <div class="button" onclick="pop(['mainMenuPop'],['randomPop'])">Random</div>
+  <div class="button" onclick="teams()">Teams</div>
+  <div class="button" onclick="preloadImages()">Cache Images</div>
+  <div class="button" id="teacherNotesButton" onclick="pop(['mainMenuPop'],['teacherNotesPop']); populateTeacherNotes()">Notes</div>
+  <div class="button" onclick="pop(['mainMenuPop'],['logPop'])">Log</div>
+  <div class="button" onclick="pop(['mainMenuPop'],['backupPop'])">Backup</div>
 </div>
 
 <div id="alertsPop" class="pop">
