--- a/class/index.html
+++ b/class/index.html
@@ -1559,12 +1559,8 @@
 
 
 
-</div> <!--end of master-wrapper-->
+</div>
 <script src="backup.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
-
-<!-- <a href="sms:+1864xxxxxxxx"></a>
-<a href="tel:+1864xxxxxxxx"></a>
-<a href="mailto:jonathan@ksgrade2.com"></a> -->
