--- a/class/students.html
+++ b/class/students.html
@@ -437,9 +437,9 @@
   </div>
   <div id="asReason"></div>
   <div>
-    <div id="asPage1" onclick="missionLinks()"></div>
-    <div id="asPage2" onclick="missionLinks()"></div>
-    <div id="asPage3" onclick="missionLinks()"></div>
+    <div id="asPage1" onclick="asLinks()"></div>
+    <div id="asPage2" onclick="asLinks()"></div>
+    <div id="asPage3" onclick="asLinks()"></div>
   </div>
 </div>
 
